human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_10.wast
(assert_invalid
  (module (func $type-unconsumed-result2
    (unreachable) (i32.const 0) (i32.add)
  ))
  "type mismatch"
)